--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@ xsi:schemaLocation="http://ma... http://maven.apache.org/xsd/maven-4.0.0.xsd">
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.5.1</version>
+            <version>3.9.6</version>
             <configuration>
                <source>${jdk.level}</source>
                <target>${jdk.level}</target>
@@ -26,13 +26,13 @@ xsi:schemaLocation="http://ma... http://maven.apache.org/xsd/maven-4.0.0.xsd">
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.19.1</version>
+            <version>3.9.6</version>
             <configuration>
                <suiteXmlFiles>
               <suiteXmlFile>patienttests.xml</suiteXmlFile>
                </suiteXmlFiles>
                <systemPropertyVariables>
-                  <browserName>firefox</browserName>
+                  <browserName>chrome</browserName>
                </systemPropertyVariables>
             </configuration>
          </plugin>
